Addresses issues #1-9 in repo issues tracker
- Implement theme_locations for nav menus

- Move Compass @import(s) out of screen.scss/ie.scss and into _klas-framework.scss

- Fix reset to appropriately target IE7/6 for image scaling

- Change default ie- and script- js codekit minification file suffix from "-comb" to "-min"

- Add example and variable for SASS media query mixin support

- searchform.php - change the query value back to s from q, use placeholder instead of value + js craptasticness (KL may have fallback on past project)

- Make Nav > UL's unstyled, clean up UL reset in both reset.scss and screen.scss

--- a/sass/partials/_klas-framework.scss
+++ b/sass/partials/_klas-framework.scss
@@ -1,9 +1,22 @@
 /* SCSS Framework boilerplate from KLAS: https://github.com/kylelarkin/klas */
+// -------------------------------------------------
+// KL[AS] Compass Imports
+// ---------------------------------------------- */
+@import "compass/css3/border-radius";
+@import "compass/css3/box-shadow";
+@import "compass/css3/box-sizing";
+@import "compass/css3/images";
+@import "compass/css3/opacity";
+@import "compass/css3/transform";
+@import "compass/css3/transition";
+@import "compass/typography/lists/inline-block-list";
+@import "compass/typography/text/replacement";
+@import "compass/utilities/general/clearfix";
+
 
 // -------------------------------------------------
 // KL[AS] Variables
 // ---------------------------------------------- */
-
 $heading-font: Helvetica, Arial, sans-serif;
 $body-font: Helvetica, Arial, sans-serif;
 
@@ -15,6 +28,12 @@ $link-hover: #555;
 $page-width: 1280px;
 
 $ani-speed: 250ms;
+
+
+// -------------------------------------------------
+// Media Query Break Points
+// ---------------------------------------------- */
+$mq-desktop: 620px;
 
 
 // -------------------------------------------------
